<resources>
    <string name="transition" translatable="false">devicesync</string>

    <string name="unknown">Unknown</string>
    <string name="dateFormatId">%1$s, %2$s</string>
    <string name="app_name">AppSyncr</string>

    <string name="browse_title" formatted="false">%d Devices, %d Apps</string>
    <string name="please_wait">Please Wait...</string>
    <string name="version">Version: %1$s</string>

    <string name="date_format">MM-dd-yyyy kk:mm</string>
    <string name="append_local">%s (local)</string>
    <string name="append_remote">%s (remote)</string>
    <string name="phone_location" formatted="false">%s, %s, %s</string>
    <string name="atv_location" formatted="false">%s, %s</string>
    <string name="latlong_location" formatted="false">Lat: %f, Long: %.2f</string>

    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="clonefrom">Clone From</string>
    <string name="remove_device">Remove Device</string>
    <string name="show_apps">Show Apps</string>
    <string name="run_app">Launch App</string>
    <string name="add_missing">Install Missing Apps</string>
    <string name="change_name">Change Name</string>

    <string name="continuetext">Continue</string>

    <!-- pref UI elements -->
    <string name="pref_app_capture_settings">Application Data</string>
    <string name="pref_use_network_for_images">Try to get app icons from the cloud</string>
    <string name="pref_use_network_for_images_summ">If checked, will try to find app icons on network (and not store in database). When unchecked, will grab local icon and store in database"</string>
    <string name="pref_ignore_system_apps">Ignore system apps</string>
    <string name="pref_ignore_system_apps_summ">If checked, will ignore apps tagged as system apps (ApplicationInfo.FLAG_SYSTEM)</string>
    <string name="pref_account_settings">Account Settings</string>
    <string name="pref_enable_flag_fn">Enable use of flags</string>
    <string name="pref_enable_flag_fn_sum">Allows you to flag apps on other devices for action</string>
    <string name="notifications">Notifications</string>
    <string name="pref_enable_notifications">Enable notifications</string>
    <string name="pref_enable_notifications_summ">When enabled, notifications for add/remove apps will be sent</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_settings_summ">Allows you to set what triggers a notification</string>
    <string name="pref_disable_rows">Disable Categories</string>
    <string name="pref_disable_rows_summ">Allows you to disable catgories from showing in the UI</string>
    <string name="pref_disable_row_local">Local Apps</string>
    <string name="pref_disable_row_missing">Local Apps</string>
    <string name="pref_disable_row_unique">Local Apps</string>
    <string name="pref_disable_row_flag">Local Apps</string>
    <string name="pref_disable_row_superset">Local Apps</string>
    <string name="pref_disable_row_remotes">Local Apps</string>
    <string-array name="empty_array"/>

    <!-- pref keys (used in persist storage) -->
    <string name="key_pref_get_data_from_net">pref_get_data_from_net</string>
    <string name="key_pref_ignore_system_apps">pref_ignore_system_apps</string>
    <string name="key_pref_enable_notifications">pref_enable_notifications</string>
    <string name="key_pref_notification_type">pref_notification_type</string>
    <string name="key_pref_disable_rows">pref_disable_rows</string>

    <string name="signin_button_text">Sign In</string>
    <string name="signout_button_text">Sign Out</string>
    <string name="signout_dialog_title">Sign Out</string>
    <string name="signout_dialog_message">Sign out or Revoke access?</string>
    <string name="signout_dialog_revoke">Revoke</string>
    <string name="disable_sync_button_text">Disable Syncs</string>
    <string name="enable_sync_button_text">Enable Syncs</string>

    <string name="app_err_title">Application Error</string>
    <string name="gms_missing_msg">AppSyncr requires an internet connection, a valid google login, and Google Play Services. One or more of these not available. Exiting.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setname_title">Change Device (BT) Name</string>

    <string name="exit_fail">Exiting - You need google Play Services to use this app.</string>
    <string name="preferences">Preferences</string>
    <string name="sync_now">Force Sync</string>
    <string name="help">Help</string>
    <string name="personal_settings">Settings</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_main_phone">MainPhoneActivity</string>
    <string name="no_bt_admin">Cannot set name - requires bluetooth admin privilege which you did not allow.</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="restore_apps_title">Restore Apps?</string>
    <string name="restore_apps_msg">AppSyncr noticed that the apps on this device are different than what has been recorded in the cloud (%d apps). Do you want to re-install missing apps recorded in the cloud on this device?</string>
    <string name="restore_disable_syncs">Disable Syncing</string>
    <string name="restore_no">No</string>
    <string name="restore_yes">Restore Apps</string>
    <string name="batch_install_title">Confirm Batch App Install</string>
    <string name="batch_uninstall_title">Confirm Batch App UnInstall</string>
    <string name="confirm">Confirm</string>

    <!-- control content descriptions -->
    <string name="device_photo">Photo of device or application</string>
    <string name="help_continue">Continue to next page</string>
    <string name="navdrawer_description">List of views you can choose</string>
    <string name="list_description">List of apps or devices you can choose</string>
    <string name="phone_listitem_description">Application or Device</string>

    <!-- object detail descriptions -->
    <string name="od_serial">Serial:</string>
    <string name="od_location">Location:</string>
    <string name="od_osver">OSVer:</string>
    <string name="od_updated">Updated:</string>
    <string name="od_version">Version:</string>
    <string name="od_installdate">Install Date:</string>
    <string name="od_count">Count:</string>

    <!-- array items -->
    <string name="array_devices">Devices</string>
    <string name="array_localapps">Local Apps</string>
    <string name="array_missingapps">Missing Apps (local)</string>
    <string name="array_uniqueapps">Unique Apps (local)</string>
    <string name="array_superset">App Superset</string>
    <string name="array_remotes">Remotes</string>
    <string name="array_missing">Missing Apps</string>
    <string name="array_flagged">Flagged Apps</string>

    <!-- error message -->
    <string name="restart_app">Restart the application to view remote device details</string>

</resources>
